# vol

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: app.rs  event.rs  legacy.rs  main.rs  ui.rs
src/tabs/: configuration.rs  input_devices.rs  mod.rs  output_devices.rs  playback.rs  recording.rs
