[package]
name = "vol"
version = "0.1.0"
authors = ["Michał Czyż <mike@c2yz.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
pipewire = "0.8.0"
ratatui = "0.29.0"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tokio = { version = "1.44.2", features = ["full"] }
