[package]
name = "vol"
version = "0.1.0"
description = "A simpler TUI version of pavucontrol"
authors = ["Michał Czyż <mike@c2yz.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.5"
strum = { version = "0.27.1", features = ["derive"] }
pipewire = "0.8.0"
